[package]
name = "yellowsun"
version = "0.1.0"
authors = ["Kaz Wesley <keziahw@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
groestl-aesni = "0.2"
jh-x86_64 = "0.2"
libc = "0.2"
keccak = "0.1.0"
blake = { git = "git://github.com/kazcw/RustCrypto-hashes", branch = "master", version = "0.2" }
skein = { git = "git://github.com/kazcw/RustCrypto-hashes", branch = "master", version = "0.3" }
sha3 = { git = "git://github.com/kazcw/RustCrypto-hashes", branch = "master", version = "0.8.1" }
byteorder = "1"

[dev-dependencies]
hex-literal = "0.1"

[profile.test]
opt-level = 2
