[package]
name = "yellowsun"
version = "0.2.2"
authors = ["Kaz Wesley <keziahw@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
description = "CryptoNight hash implementation for Monero and related cryptocurrency"
keywords = ["crypto", "hash", "monero"]
categories = ["cryptography"]
repository = "https://github.com/kazcw/yellowsun"

[dependencies]
groestl-aesni = "0.2"
jh-x86_64 = "0.2"
libc = "0.2"
keccak = "0.1.0"
blake-hash = "0.2"
skein-hash = "0.3"
sha3 = "0.8.1"

[dev-dependencies]
hex-literal = "0.1"

[features]
default = []
dev = []

[[example]]
name = "hash_away"
required-features = ["dev"]

[profile.test]
opt-level = 2
